new header and footer add

--- a/Projects.html
+++ b/Projects.html
@@ -21,134 +21,154 @@
 <body>
   <header>
     <section class="navbar-section">
-        <div class="container">
-            <div class="d-flex justify-content-between">
-                <a class="fs-3 hammer" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-                    aria-controls="offcanvasExample">
-                    <i class="fa-solid fa-bars searchglass"></i>
-                </a>
-                <div class="nav-sign-btn">
-                    <a href="" class="btn"><img src="/img/logo (1).png" alt="" width="90px"></a>
-                </div>
-                <div class="nav-sign-btn">
-                    <a href="" class="btn">Sign in</a>
-                </div>
-            </div>
-            <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
-                aria-labelledby="offcanvasExampleLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href=""><i
-                                class="fa-solid fa-magnifying-glass text-dark fs-4"></i></a></h5>
-                    <button type="button" class="btn-close " data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <div class="mb-3 border-2 border-bottom">
-                        <img class="img-fluid rounded-circle" src="https://ik.imagekit.io/gku4adhog/first-fly-travel/testimonial2img.png?updatedAt=1714374953317" alt="" width="120px">
-                        <div class="text-white text-end profile-owner ms-4">
-                            <h4><img class="img-fluid me-2" src="/img/Ellipse 9.png" alt="">Client</h4>
-                        </div>
-                    </div>
-                    <ul class="p-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Service</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                    
-                        <div class="accordion accordion-flush" id="accordionFlushExample">
-                            <div class="accordion-item ">
-                                <h2 class="accordion-header" id="flush-headingOne">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                        aria-controls="flush-collapseOne">
-                                        Accordion
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseOne" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder</div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingTwo">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                        aria-controls="flush-collapseTwo">
-                                       All Product
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">onstrate</div>
-                                </div>
-                            </div>
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="flush-headingThree">
-                                    <button class="accordion-button border-0 shadow-none collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                        aria-controls="flush-collapseThree">
-                                        Whishlist
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder</div>
-                                </div>
-                            </div>
-                        </div>
-                    </ul>
-                    <ul class="offcanvas-social-icons p-0">
-                        <li>
-                            <a href=""><i class="fa-brands fa-facebook-f text-info"></i></a>
-                        </li>
-                        <li>
-                            <a href=""><i class="fa-brands fa-instagram text-danger"></i></a>
-                        </li>
-                        <li>
-                            <a href=""><i class="fa-brands fa-linkedin-in text-primary"></i></a>
-                        </li>
-                        <li>
-                            <a href=""><i class="fa-brands fa-twitter text-success"></i></a>
-                        </li>
-                    </ul>
-                    <div class="offcanvas-left-call-btn">
-                        <a href="" class="btn"><img class="img-fluid" src="/img/call-round.gif" alt="" width="50px"
-                                height="60px">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-
-            <ul class="navbar-bottom-nav border-1 p-0 border-top">
-                <li>
-                    <a href="">home</a>
-                </li>
-                <li>
-                    <a href="">Cart</a>
-                </li>
-                <li>
-                    <a href="">Product</a>
-                </li>
-                <li>
-                    <a href="">Categeory</a>
-                </li>
-                <li>
-                    <a href="">link</a>
-                </li>
-
-            </ul>
-            <div class="text-center">
-                <input type="text" class="header-input" placeholder="Search Products" name="" id="">
-            </div>
+      <div class="container">
+        <div class="d-flex justify-content-between">
+          <a class="fs-3 hammer" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+            aria-controls="offcanvasExample">
+            <i class="fa-solid fa-bars searchglass"></i>
+          </a>
+          <div class="nav-sign-btn">
+            <a href="javascript:void(0)" class="btn"><img src="img/logo (1).png" alt="" width="90px"></a>
+          </div>
+          <div class="nav-sign-btn">
+            <a href="javascript:void(0)" class="btn">Sign in</a>
+            <a href="javascript:void(0)" class="btn border-0"><img class="img-fluid me-1" src="img/call-round.gif" alt="" width="35px">+1 9137168732</a>
+          </div>
         </div>
+        <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
+          aria-labelledby="offcanvasExampleLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href="javascript:void(0)"><i
+                  class="fa-solid fa-magnifying-glass text-dark fs-4"></i></a></h5>
+            <button type="button" class="btn-close " data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="mb-3 border-2 border-bottom">
+              <img class="img-fluid rounded-circle"
+                src="https://ik.imagekit.io/gku4adhog/first-fly-travel/testimonial2img.png?updatedAt=1714374953317"
+                alt="" width="120px">
+              <div class="text-white text-end profile-owner ms-4">
+                <h4><img class="img-fluid me-2" src="img/Ellipse 9.png" alt="">Client</h4>
+              </div>
+            </div>
+            <ul class="p-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Service</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item ">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                      data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
+                      aria-controls="flush-collapseOne">
+                      Accordion
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                      data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                      aria-controls="flush-collapseTwo">
+                      All Product
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">onstrate</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                      data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
+                      aria-controls="flush-collapseThree">
+                      Whishlist
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder</div>
+                  </div>
+                </div>
+              </div>
+            </ul>
+            <ul class="offcanvas-social-icons p-0">
+              <li>
+                <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f text-info"></i></a>
+              </li>
+              <li>
+                <a href="javascript:void(0)"><i class="fa-brands fa-instagram text-danger"></i></a>
+              </li>
+              <li>
+                <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
+              </li>
+              <li>
+                <a href="javascript:void(0)"><i class="fa-brands fa-twitter text-success"></i></a>
+              </li>
+            </ul>
+            <div class="offcanvas-left-call-btn">
+              <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif" alt=""
+                  width="50px" height="60px">Contact Us</a>
+            </div>
+          </div>
+        </div>
+
+        <ul class="navbar-bottom-nav border-1 p-0 border-top">
+          <li>
+            <a href="javascript:void(0)">home</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">Shop</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">About us</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">Blogs</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">Pages</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">FAQ's</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">Features</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)"><i class="fa-solid fa-user fs-5 text-danger  px-2 py-2 rounded-pill bg-white"></i></a>
+          </li>
+          <li>
+            <a href="javascript:void(0)"><i class="fa-solid fa-lock fs-5 text-success border px-2 py-2 rounded-pill bg-white"></i></a>
+          </li>
+          <li>
+            <a href="javascript:void(0)"><i class="fa-solid fa-cart-plus fs-5 text-dark border px-2 py-2 rounded-pill bg-white"></i></a>
+          </li>
+        </ul>
+        <div class="text-center position-relative">
+          <input type="text" class="header-input " placeholder="Search Products" name="" id="">
+          <div  class="position-absolute top-0 end-0">
+            <a href=""><i class="fa-solid fa-magnifying-glass text-dark"></i></a>
+          </div>
+        </div>
+      </div>
     </section>
-</header>
+  </header>
 
   <style>
     .top-fixed-section {
@@ -400,7 +420,6 @@
 
 
 
-
   <footer class="footer-section">
     <div class="container">
       <div class="row footer-top">
@@ -409,8 +428,7 @@
             <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt="" width="160px"
               height="200px">
             <p class="text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui aperiam, quia
-              laboriosam ducimus praesentium nisi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui aperiam.
             </p>
             <div class="left-socials-icons text-center">
               <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f"></i></a>
@@ -427,7 +445,7 @@
             <div class="col-lg-6 col-6 footer-column-links">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
+                  <a class="nav-link active" href="javascript:void(0)">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="javascript:void(0)">ABOUT US</a>
@@ -449,16 +467,16 @@
             <div class="col-lg-6 col-6 footer-column-links">
               <ul class="nav flex-column">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">LOGIN</a>
+                  <a class="nav-link active" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="Registration.html">REGISTRATION</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">SERVICES</a>
+                  <a class="nav-link active" href="categories.html">Categories</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">PAGES</a>
+                  <a class="nav-link active" href="Projects.html">Our Project</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="Our-Team.html">OUR TEAM</a>
@@ -506,7 +524,7 @@
             <a href="javascript:void(0)"> BRANDS</a>
             <a href="javascript:void(0)">CASES</a>
             <a href="javascript:void(0)"> CABLES</a>
-            <a href="javascript:void(0)"> CABLES</a>
+            <a href="javascript:void(0)"> SHIRT</a>
           </div>
 
           <div class="footer-contact-details-body pt-2 ">
@@ -570,14 +588,15 @@
       <div class="row text-center">
         <div class="col-lg-4 col-md-6 my-2 col-12">
           <p>
-            © 2015 All rights reserved. Development by <a class="agency-copy" href="javascript:void(0)">Vijayyadav</a>
+            © 2024 All rights reserved. Development by <a class="agency-copy"
+              href="javascript:void(0)">Vijaykumar.Yadav</a>
           </p>
         </div>
         <div class="col-lg-4 mb-2 col-md-6 col-12">
           <div class="footer-social-icons">
-            <a href="javascript:void(0)" class=" text-decoration-none">Privacy Policy</a> <span
+            <a href="privacy-policy.html" class=" text-decoration-none">Privacy Policy</a> <span
               class="text-white">|</span>
-            <a href="javascript:void(0)" class=" text-decoration-none">Terms And Condition</a>
+            <a href="Terms-And-Condition.html" class=" text-decoration-none">Terms And Condition</a>
           </div>
         </div>
         <div class="col-lg-4 co-12">
@@ -586,6 +605,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="window-top-bottom-scroll">
+      <button class=" btn" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </footer>
 
