--- a/Terms-And-Condition.html
+++ b/Terms-And-Condition.html
@@ -21,7 +21,7 @@
                 <i class="fa-solid fa-bars searchglass"></i>
               </a>
               <div class="nav-sign-btn">
-                <a href="javascript:void(0)" class="btn"><img src="img/logo (1).png" alt="" width="90px"></a>
+                <a href="index.html" class="btn"><img src="img/logo (1).png" alt="" width="90px"></a>
               </div>
               <div class="nav-sign-btn">
                 <a href="javascript:void(0)" class="btn">Sign in</a>
