--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -31,8 +31,8 @@
             <a href="index.html" class="btn"><img src="img/logo (1).png" alt="" width="90px"></a>
           </div>
           <div class="nav-sign-btn">
-            <a href="javascript:void(0)" class="btn">Sign in</a>
-            <a href="javascript:void(0)" class="btn border-0"><img class="img-fluid me-1" src="img/call-round.gif" alt="" width="35px">+1 9137168732</a>
+            <a href="Login-page.html" class="btn">Login</a>
+            <a href="Sign-up.html" class="btn">Register</a>
           </div>
         </div>
         <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
@@ -160,9 +160,9 @@
             <a href="javascript:void(0)"><i class="fa-solid fa-cart-plus fs-5 text-dark border px-2 py-2 rounded-pill bg-white"></i></a>
           </li>
         </ul>
-        <div class="text-center position-relative">
-          <input type="text" class="header-input " placeholder="Search Products" name="" id="">
-          <div  class="position-absolute top-0 end-0">
+        <div class="text-center header-input-body mx-auto">
+          <input type="text" class="header-input" placeholder="Search Products" name="" id="">
+          <div  class="header-input-body-glass">
             <a href=""><i class="fa-solid fa-magnifying-glass text-dark"></i></a>
           </div>
         </div>
